<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/covered_by_your_grace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="75sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/userEmailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center_vertical"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/bg_color" />

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white_greyish"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_border"
        android:drawableLeft="@drawable/confirm_password"
        android:drawablePadding="8dp"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center_vertical"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_bg"
        android:fontFamily="@font/anonymous_pro_italic"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textAlignment="center"
        android:textColor="@color/bg_color"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="signUp"/>

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:fontFamily="@font/anonymous_pro_italic"
        android:textColor="@color/white_greyish"
        android:textSize="15sp" />

</LinearLayout>