<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingTop="24dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/profile_pic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/covered_by_your_grace"
                    android:text="Shashank Singhal"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/anonymous_pro_italic"
                    android:text="Mobile Application Developer"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#f4f4f4"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/anonymous_pro_italic"
                            android:text="24 Collection"
                            android:textColor="#000000"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="84dp"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:background="@color/bg_color" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/anonymous_pro_italic"
                            android:text="12 History"
                            android:textColor="#b3b3b3"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="84dp"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:background="@color/bg_color"
                            android:visibility="invisible" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="50"
                        app:cardBackgroundColor="#ffc6c6"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp"
                        android:layout_marginRight="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:src="@drawable/shirt" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/anonymous_pro_italic"
                                android:text="@string/shirts"
                                android:textColor="#3C3C3C"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="50"
                        app:cardBackgroundColor="#f9f9f9"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp"
                        android:layout_marginLeft="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:src="@drawable/pants" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/anonymous_pro_italic"
                                android:text="@string/pants"
                                android:textColor="#3C3C3C"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="24dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="50"
                        app:cardBackgroundColor="#f9f9f9"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp"
                        android:layout_marginRight="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:src="@drawable/jacket" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/anonymous_pro_italic"
                                android:text="@string/jacket"
                                android:textColor="#3C3C3C"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="50"
                        app:cardBackgroundColor="#a4bdff"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp"
                        android:layout_marginLeft="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                android:src="@drawable/shoe" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:fontFamily="@font/anonymous_pro_italic"
                                android:text="@string/shoe"
                                android:textColor="#3C3C3C"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_favorite_white_24dp"
            app:fabSize="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="100">

            <LinearLayout
                android:id="@+id/home_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_home_gray_24dp" />

                <View
                    android:layout_width="84dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/bg_color"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_person_gray_24dp" />

                <View
                    android:layout_width="84dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/bg_color" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>